--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf ./build && tsc",
     "dev": "nodemon",
     "start": "npm run build && node build/app.js",
-    "test": "test"
+    "test": ""
   },
   "author": "Guilherme F Assis",
   "license": "ISC",
